Closed
Bug 676924
Opened 14 years ago
Closed 14 years ago
uint64/JSUint64 conflict leading to build failure in dom/base/nsGlobalWindow.cpp and dom/indexedDB/IDBObjectStore.cpp
Categories
(Core :: Storage: IndexedDB, defect)
Tracking
()
RESOLVED
FIXED
mozilla8
People
(Reporter: gaston, Assigned: gaston)
Details
Attachments
(1 file, 1 obsolete file)
1.51 KB,
patch
|
khuey
:
review+
|
Details | Diff | Splinter Review |
Probably since landing of http://hg.mozilla.org/mozilla-central/rev/6647ba316a10 adding the use of uint64 type, builds fails for me with the following :
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp: In member function 'void PostMessageEvent::SetJSData(JSAutoStructuredCloneBuffer&)':
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp:5944: error: invalid conversion from 'uint64**' to 'JSUint64**'
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp:5944: error: initializing argument 1 of 'void JSAutoStructuredCloneBuffer::steal(JSUint64**, size_t*, JSUint32*)'
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp: In member function 'virtual nsresult PostMessageEvent::Run()':
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp:5991: error: invalid conversion from 'uint64*' to 'JSUint64*'
/var/buildslave-mozilla/comm-central-amd64/build/mozilla/dom/base/nsGlobalWindow.cpp:5991: error: initializing argument 1 of 'void JSAutoStructuredCloneBuffer::adopt(JSUint64*, size_t, JSUint32)'
gmake[6]: *** [nsGlobalWindow.o] Error 1
Full log at http://buildbot.rhaalovely.net/builders/comm-central-amd64/builds/96/steps/build/logs/stdio
That's probably related to an uint64/JSUint64 mismatch.. and somewhat related to https://bugzilla.mozilla.org/show_bug.cgi?id=662852
Assignee | ||
Comment 1•14 years ago
|
||
Attachment #551137 -
Flags: review?(khuey)
Assignee | ||
Comment 2•14 years ago
|
||
With that patch, the build goes further, but fails later with :
/var/buildslave-mozilla/mozilla-central-amd64/build/dom/indexedDB/IDBObjectStore.cpp: In static member function 'static nsresult mozilla::dom::indexedDB::IDBObjectStore::GetStructuredCloneDataFromStatement(mozIStorageStatement*, PRUint32, JSAutoStructuredCloneBuffer&)':
/var/buildslave-mozilla/mozilla-central-amd64/build/dom/indexedDB/IDBObjectStore.cpp:838: error: invalid conversion from 'const uint64*' to 'const JSUint64*'
/var/buildslave-mozilla/mozilla-central-amd64/build/dom/indexedDB/IDBObjectStore.cpp:838: error: initializing argument 1 of 'bool JSAutoStructuredCloneBuffer::copy(const JSUint64*, size_t, JSUint32)'
gmake[6]: *** [IDBObjectStore.o] Error 1
Adding another fix on top of the previous...
Assignee | ||
Comment 3•14 years ago
|
||
Build passes fine in dom/base and dom/indexedDB with this patch, will confirm if the full build is ok..
Attachment #551137 -
Attachment is obsolete: true
Attachment #551137 -
Flags: review?(khuey)
Assignee | ||
Comment 4•14 years ago
|
||
As can be seen on http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/119, the build is successful with the patch fixing those two issues.. after that, it might not be the perfect patch though.
Summary: uint64/JSUint64 conflict leading to build failure in dom/base/nsGlobalWindow.cpp → uint64/JSUint64 conflict leading to build failure in dom/base/nsGlobalWindow.cpp and dom/indexedDB/IDBObjectStore.cpp
Assignee | ||
Updated•14 years ago
|
Attachment #551158 -
Flags: review?(khuey)
Assignee | ||
Comment 5•14 years ago
|
||
And if that can give another data point, it started failing 7 days ago, http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/110 was successful, http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/111 was the first time this particular failure showed.
Comment on attachment 551158 [details] [diff] [review]
second fix, this time replacing uint64 by uint64_t in IDBObjectStore.cpp
r=me
Awesome that you have a buildbot setup for OpenBSD.
Attachment #551158 -
Flags: review?(khuey) → review+
Assignee | ||
Comment 7•14 years ago
|
||
Not sure it's the best patch (i'm still lost in all those typedefs) or if it's worth a try run, but setting checkin-needed.
And yes, that buildbot is quite handy, but needs time to be babysitted.. it's very rare to get it all green :)
Keywords: checkin-needed
Updated•14 years ago
|
Assignee: nobody → landry
Updated•14 years ago
|
Comment 8•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
Component: DOM → DOM: IndexedDB
Target Milestone: mozilla8 → ---
Version: Trunk → unspecified
Assignee | ||
Updated•14 years ago
|
Target Milestone: --- → mozilla8
Version: unspecified → Trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•