Bug 676924 - Use JSUint64 instead of uint64. r=khuey